improved UI. * Fixed a layout bug on the login page that resulted from the new paper  margins. * Fixed a layout bug on the Dashboard that resulted from the new paper margins. * Button for creating new entities removed from the top bar and relocated to the page content. * Added shortcuts to the top bar, but they do not have any functionality yet. * Display of texts and icons in dark mode adapted. * Added headings to the pages.

--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,7 @@ code {
 
 /* Scrollbar Track */
 ::-webkit-scrollbar-track {
-  background:#2b3559; 
+  background:#2d323b; 
 }
  
 /* Scrollbar Handle */
